# halolight-api-python

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/: __init__.py  auth.py  calendar.py  dashboard.py  deps.py  documents.py  files.py  folders.py  messages.py  notifications.py  permissions.py  roles.py  teams.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  activity.py  base.py  calendar.py  conversation.py  document.py  enums.py  file.py  notification.py  password_reset_token.py  refresh_token.py  role.py  team.py  user.py
app/schemas/: __init__.py  document.py  role.py  team.py  user.py
app/services/: document_service.py  password_reset_service.py  role_service.py  team_service.py  user_service.py
tests/: test_health.py
